--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -1,4 +1,21 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.4.11 [Release on xx/07/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Mass Update did not use the overwrite field settings correctly. Additionally values
+  were cleared.
+- Changed names for fields caused the sorting dialog to stop working correctly; 
+  empty field shown in the field selection.
+
+[Changed]
+- Mass Update: A new option is available "Use original service settings". When enabled
+  the original settings as stored in the item. Only items having service information set 
+  will be updated. This was, somewhat, the default behavior in the past which caused 
+  confusion. By default this option is "off".
+ 
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.4.10 [Release on 17/06/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 I'd like to thank Pierre-Yves  for his contributions.
