--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -3,7 +3,7 @@ Data Crow 3.4.12 [Release on xx/07/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
 [Fixed]
-- File System Tree view did not always show the correct path structure.
+- File System Tree view sometimes showed an incorrect path structure.
 
 
 -----------------------------------------------------------------------------------------
