*** empty log message ***

--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -3,9 +3,10 @@ Data Crow 3.4.12 [Release on xx/07/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
 [Fixed]
-- File System Tree view sometimes showed an incorrect path structure.
+- File tree view sometimes showed an incorrect path structure.
 - Building a new chart will no longer lock the GUI.
 - Building the File System Tree will no longer lock the GUI.
+- Deleted items were not removed from the file tree view.
 
 
 -----------------------------------------------------------------------------------------
