*** empty log message ***

--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.4.12 [Release on xx/07/2009] [testing: high] [target: production]
+Data Crow 3.4.12 [Release on 19/07/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
 [Fixed]
@@ -12,6 +12,10 @@ Data Crow 3.4.12 [Release on xx/07/2009] [testing: high] [target: production]
   (rare occurrence).
 - The grouping pane sometimes failed to add an item (rare occurrence).
 
+[Changed]
+- The File Structure tree now shows the correct file system structure and
+  indicates whether the file or directory actually exists.
+- 'Locale Settings' has been renamed to 'Regional Settings'.
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.4.11 [Release on 10/07/2009] [testing: high] [target: production]
