--- a/homepage/changelog.txt
+++ b/homepage/changelog.txt
@@ -1,4 +1,25 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.4.12 [Release on 19/07/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- File tree view sometimes showed an incorrect path structure.
+- Building a new chart will no longer lock the GUI.
+- Building the File System Tree will no longer lock the GUI.
+- Deleted items were not removed from the file tree view.
+- New items were not added to the file tree view.
+- Software Import in combination with an online service sometimes failed 
+  (rare occurrence).
+- The grouping pane sometimes failed to add an item (rare occurrence).
+- Several mistakes in the Dutch translation.
+
+[Changed]
+- The File Structure tree now shows the correct file system structure and
+  indicates whether the file or directory actually exists.
+- 'Locale Settings' has been renamed to 'Regional Settings'.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.4.11 [Release on 10/07/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 This is a maintenance release fixing several issues for the mass update and the drive
