--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -1,4 +1,13 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.4.13 [Release on xx/07/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- MKV files locked by the music file import process (fixed in the Matroska third party
+  library).
+- Import of e-Books gets stuck when importing a large amount.  
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.4.13 [Release on 25/07/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
