*** empty log message ***

--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -1,12 +1,18 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.4.13 [Release on xx/07/2009] [testing: high] [target: production]
+Data Crow 3.4.13.1 [Release on 26/07/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
+This patch fixes a couple of issues related to the mass update and the file 
+import functionality.
 
 [Fixed]
 - MKV files locked by the music file import process (fixed in the Matroska third party
   library).
-- Import of e-Books gets stuck when importing a large amount.  
+- Import of e-Books gets stuck when importing a large amount of files.  
 - NullPointerException during music album import in combination with an online service.
+- ProgressDialog enters infinite loop on disconnect.
+- Error while removing an item: 
+  java.lang.IllegalArgumentException: node does not have a parent
+  
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.4.13 [Release on 25/07/2009] [testing: high] [target: production]
