--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -6,6 +6,7 @@ Data Crow 3.4.15 [Release on 16/08/2009] [testing: high] [target: production]
 - Tabs could not be created.
 - Tab order not remembered correctly.
 - Children of items were not imported (XML import).
+- The table view did no longer work correctly for parent <> child modules.
 
 
 -----------------------------------------------------------------------------------------
