--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -1,12 +1,16 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.4.15 [Release on 16/08/2009] [testing: high] [target: production]
+Data Crow 3.4.15 [Release on 17/08/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
+Apologies for the previous version. Somehow I managed to release a version based on the
+wrong source tree which resulted in a corrupted Item Form.
 
 [Fixed]
 - Tabs could not be created.
 - Tab order not remembered correctly.
 - Children of items were not imported (XML import).
-- The table view did no longer work correctly for parent <> child modules.
+- The table view did no longer work correctly for parent <> child modules 
+  (multiple issues).
+- Categories and other properties could no longer be created.
 
 
 -----------------------------------------------------------------------------------------
