--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -20,6 +20,7 @@ Data Crow 3.4.18 [Release on 07/09/2009] [testing: high] [target: production]
   anymore.
 - The main form's locations is now remembered. Other dialogs and windows are placed in the 
   center of this form. This fixes the dual monitor issue.
+- Images not saved when saving new items from the table view.
 
 [Changed]
 - Additional information when importing items.
