--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -24,6 +24,8 @@ Data Crow 3.4.18 [Release on 07/09/2009] [testing: high] [target: production]
 - Child records were not removed from the cache.
 - The item form for music albums and audio CD sometimes incorrectly mentions that there
   are unsaved changes.
+- Several minor problems with the table view in when used for saving new music albums, 
+  imported by the file importer.
 
 [Changed]
 - Additional information when importing items.
@@ -33,6 +35,7 @@ Data Crow 3.4.18 [Release on 07/09/2009] [testing: high] [target: production]
 - XML and XSD files are now removed after a report has been created.
 - After entering an ISBN in the online search form the ISBN search mode will automatically 
   be used.
+- The user reviews have been removed from the Amazon search.
 
 [New]
 - Version check on startup. The version check can be disabled.
