*** empty log message ***

--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -1,4 +1,13 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.4.19 [Release on 09/09/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Locking issue. The HSQL engine has been upgraded to the latest version. 
+- Reports for audio CDs now contain the genre(s).
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.4.18 [Release on 07/09/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
