*** empty log message ***

--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -7,8 +7,8 @@ Data Crow 3.4.19 [Release on 09/09/2009] [testing: high] [target: production]
 - Reports for audio CDs now contain the genre(s).
 - PDF front page not added when using 'Attach File Info'.
 
-[Changed]
-- The help has been reviewed and updated.
+[New]
+- A new parameter has been added: -debug.
 
 
 -----------------------------------------------------------------------------------------
